force-app/main/default/objects/ServiceAppointmentStatusChange__e/ServiceAppointmentStatusChange__e.object-meta.xml
<CustomObject>
    <label>Service Appointment Status Change</label>
    <pluralLabel>Service Appointment Status Change</pluralLabel>
</CustomObject>