force-app/main/default/objects/ServiceAppointmentStatusChange__e/fields/Outgoing_Type__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Type__c</fullName>
    <label>Outgoing Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>