force-app/main/default/objects/ServiceAppointmentStatusChange__e/fields/Service_Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_ID__c</fullName>
    <label>Service Appointment ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>