force-app/main/default/objects/ServiceAppointmentStatusChange__e/fields/Service_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Job_ID__c</fullName>
    <label>Service Job ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>