force-app/main/default/objects/ServiceAppointmentStatusChange__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>